Return on empty path in greaterCirclePath to avoid crash

Fixes: QTBUG-128901
Pick-to: 6.9 6.8
Change-Id: I9b3f2bfce2fb610778e6439f70dec4a9f75a14bc
Reviewed-by: Mate Barany <mate.barany@qt.io>